<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ecn_project</name>
  <version>0.0.0</version>
  <description>(1,2) mobile robot</description>
  <maintainer email="khaled.alimi@eleves.ec-nantes.fr">ALIMI_Khaled</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <!--include other packages at execute time where we're running them in a launch
	  if you rely on package to build use <build_depend> or <depend> for general dependencies-->
  <exec_depend>demo_nodes_cpp</exec_depend>
  <exec_depend>demo_node_cpp</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
